# journal

./: .pre-commit-config.yaml  LICENSE  LOG.md  README.md  REFERENCES.md  pyproject.toml  ruff.toml
journal/: admin.py  models.py  serializers.py  urls.py  views.py
journal-frontend/: package.json  pnpm-lock.yaml  tsconfig.app.json
journal-frontend/src/: App.tsx  PostList.tsx
journal-frontend/src/state/: postAtom.ts
journal/migrations/: 0001_initial.py
src/: settings.py  urls.py
src/journal/: __init__.py
